   *  Converted unicode tests from using u'', patch from Eren Güve.

   *  Included license file (pull request by "Philippe" pombredanne).

   *  Doing a "set" after server goes away, raised AttributeError:
      'NoneType' object has no attribute 'sendall'.  Patch by Ken Lalonde

   *  incr/decr return None instead of 0 on server connection failure.
      Suggested by Ivan Virabyan

   *  Supports IPv6 connections using: "inet6:[fd00::32:19f7]:11000".
      Patch by Romain Courteaud

   *  Switching over to github for this project:

         https://github.com/linsomniac

   * Bug #974632: _ConnectionDeadError sometimes was escaping the get/set
   code.  This should return to readline() not raising an exception, except
   in the case that it's called from the get/set().  Report from Gary
   Poster, proposed patch by Brad Crittenden.

   Misc fixes by Brad Crittenden: fixing a docstring, if "port" is set to
   any false-like value it will default to 11211.

Mon, 29 Nov 2011 12:37:32 -0700  Sean Reifschneider  <jafo@tummy.com>

   * Bug #887765: Interrupted connection to memcache server can cause
   inconsistencies.
   Added "flush_on_reconnect" (defaults to off) to Client() which will
   cause a client that has lost connection to a server and then reconnects
   to flush the cache on the reconnect so that it doesn't get old values
   from that server.  Patch by Daniel Benamy.

Sun, 27 Nov 2011 18:15:32 -0700  Sean Reifschneider  <jafo@tummy.com>

   * Bug #745633: Values of maximum size are not stored
   API inconsistency, max value length was tested for <= while max KEY
   length was <.  So I picked that keys and values *LONGER* than the
   specified max value are what is used, and added documentation and tests
   to that effect.  The test for max value tested that length plus 4, so
   I've changed that to be that value plus 1.  Issue found by matt-quru.

   * Bug #713488: Issues Invalid "delete" command.